feat: add support for shadow variables